[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Robots/robot.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/player_controller.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.8327, 38.5625 )

[node name="Player" type="Area2D" groups=[
"player",
]]
script = ExtResource( 2 )
acceleration = 0.2

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 0 )
shape = SubResource( 1 )

[node name="MissileSpawn" type="Position2D" parent="."]
position = Vector2( 6, 31 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Player_area_exited"]
